--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,22 @@
 -----------------------
+**发布时间：**2020.6.8
+**代码地址：**https://github.com/li59533/485temperaturevibration_Firmwave.git
+**版本：**V0.1.3
+**说明：**
+	1.modbus寄存器表见相关文档。
+
+**更新内容：**
+	首次提交
+_删除：_
+		无
+_新增：_
+		1.三轴小于0.25ACC_RMS ， 各个轴数据清0
+_修改：_
+​		1.三轴默认灵敏度132mv/g
+
+
+-----------------------
+-----------------------
 **发布时间：**2020.6.1
 **代码地址：**https://github.com/li59533/485temperaturevibration_Firmwave.git
 **版本：**V0.1.0
