--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,22 @@
 -----------------------
+**发布时间：**2020.7.10
+**代码地址：**https://github.com/li59533/485temperaturevibration_Firmwave.git
+**版本：**V0.2.4
+**说明：**
+	1.modbus寄存器表见相关文档。
+
+**更新内容：**
+	
+_删除：_
+		无
+_新增：_
+		1.增加自校准功能
+_修改：_
+
+
+
+-----------------------
+-----------------------
 **发布时间：**2020.6.8
 **代码地址：**https://github.com/li59533/485temperaturevibration_Firmwave.git
 **版本：**V0.1.3
